--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ PyYAML==6.0
 scikit_image==0.19.2
 scikit_learn==1.0.2
 scipy==1.9.1
-torch==1.13.1
+#torch==1.13.1
 torchvision==0.14.1
 tqdm==4.64.1
 XlsxWriter==3.0.3
