--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 albumentations==1.3.0
+nibabel==5.1.0
+SimpleITK==2.2.1
 h5py==3.7.0
 imageio==2.19.3
 lpips==0.1.4
@@ -8,13 +10,11 @@ numpy==1.21.5
 opencv_python==4.7.0.72
 pandas==1.4.4
 Pillow==9.5.0
-PyYAML==6.0
+PYyaml==6.0
 scikit_image==0.19.2
 scikit_learn==1.0.2
 scipy==1.9.1
 torchvision==0.14.1
 tqdm==4.64.1
 XlsxWriter==3.0.3
-torch==1.13.1+cu117
-#torch==1.13.1+cu117 --extra-index-url https://download.pytorch.org/whl/cu117
 
